optimiez the page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Proposal Website </title>
+    <meta name="description" content="Discover the best engagement ring ideas and creative ways to propose to your girlfriend this Valentine's Day! Find unique proposal ideas and thoughtful gestures for a memorable moment together. Shop engagement rings and plan your perfect proposal today!">
+    <meta name="keywords" content="propose girlfriend, valentine, valentine proposal engagement ring, best way to propose, proposal ring, be my girlfriend proposal, birthday proposal, love proposal, best proposal, birthday propose, cute proposal, engagement surprise, marriage proposal, propose for marriage, propose to be girlfriend, propose to ex girlfriend, proposal ideas, best proposal ideas, cute ways to propose, Valentine's Day proposal">
   </head>
   <body>
     <div id="root"></div>
